--- a/core/resources/src/main/res/values-sv/strings.xml
+++ b/core/resources/src/main/res/values-sv/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources xmlns:tools="http://schemas.android.com/tools">
+  -->
+
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="smth_went_wrong">Något gick fel: %1$s</string>
     <string name="size">Storlek %1$s</string>
     <string name="loading">Laddar…</string>
@@ -2055,11 +2057,11 @@
     <string name="original_filename_pattern_description">Använder det ursprungliga filnamnet utan förlängning, vilket hjälper dig att hålla källidentifieringen intakt.</string>
     <string name="width_pattern_description">Bildbredden i pixlar, användbar för att spåra upplösningsändringar eller skalningsresultat.</string>
     <string name="height_pattern_description">Bildhöjden i pixlar, användbart när du arbetar med bildförhållanden eller exporter.</string>
-    <string name="formatted_timestamp_pattern_description">En anpassningsbar tidsstämpel som låter dig definiera ditt eget format som åååå-MM-dd_HH-mm-ss för perfekt sortering.</string>
     <string name="random_numbers_pattern_description">Genererar slumpmässiga siffror för att garantera unika filnamn; lägg till fler siffror för extra säkerhet mot dubbletter.</string>
     <string name="sequence_number_pattern_description">Automatisk inkrementerande räknare för batchexport, perfekt när du sparar flera bilder i en session.</string>
     <string name="preset_info_pattern_description">Infogar det använda förinställningsnamnet i filnamnet så att du enkelt kan komma ihåg hur bilden bearbetades.</string>
     <string name="scale_mode_pattern_description">Visar bildskalningsläget som används under bearbetningen, vilket hjälper till att särskilja bilder som har ändrats, beskurna eller anpassade.</string>
     <string name="suffix_pattern_description">Anpassad text placerad i slutet av filnamnet, användbar för versionshantering som _v2, _edited eller _final.</string>
     <string name="extension_pattern_description">Filtillägget (png, jpg, webp, etc.), matchar automatiskt det faktiska sparade formatet.</string>
+    <string name="formatted_timestamp_pattern_description">En anpassningsbar tidsstämpel som låter dig definiera ditt eget format med java-specifikation för perfekt sortering.</string>
 </resources>
