--- a/core/resources/src/main/res/values-et/strings.xml
+++ b/core/resources/src/main/res/values-et/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources>
+  -->
+
+<resources>
     <string name="smth_went_wrong">Midagi läks valesti: %1$s</string>
     <string name="size">Suurus %1$s</string>
     <string name="loading">Laadin…</string>
@@ -2054,11 +2056,11 @@
     <string name="original_filename_pattern_description">Kasutab algset failinime ilma laiendita, mis aitab teil hoida allika identifitseerimist puutumata.</string>
     <string name="width_pattern_description">Pildi laius pikslites, kasulik eraldusvõime muutuste jälgimiseks või tulemuste skaleerimiseks.</string>
     <string name="height_pattern_description">Pildi kõrgus pikslites, abiks kuvasuhtega töötamisel või eksportimisel.</string>
-    <string name="formatted_timestamp_pattern_description">Kohandatav ajatempel, mis võimaldab teil täiuslikuks sortimiseks määrata oma vormingu, näiteks yyyy-MM-dd_HH-mm-ss.</string>
     <string name="random_numbers_pattern_description">Genereerib juhuslikud numbrid, et tagada unikaalsed failinimed; lisage rohkem numbreid, et kaitsta end duplikaatide eest.</string>
     <string name="sequence_number_pattern_description">Automaatselt suurenev loendur partiide eksportimiseks, ideaalne mitme pildi salvestamiseks ühe seansi jooksul.</string>
     <string name="preset_info_pattern_description">Lisab rakendatud eelseadistuse nime failinimesse, et saaksite hõlpsasti meeles pidada, kuidas pilti töödeldakse.</string>
     <string name="scale_mode_pattern_description">Kuvab töötlemise ajal kasutatava pildi skaleerimise režiimi, aidates eristada muudetud suurusega, kärbitud või kohandatud pilte.</string>
     <string name="suffix_pattern_description">Failinime lõppu paigutatud kohandatud tekst, mis on kasulik versioonide loomiseks, nagu _v2, _edited või _final.</string>
     <string name="extension_pattern_description">Faililaiend (png, jpg, webp jne), mis vastab automaatselt tegelikule salvestatud vormingule.</string>
+    <string name="formatted_timestamp_pattern_description">Kohandatav ajatempel, mis võimaldab teil täiusliku sortimise jaoks määratleda oma vormingu Java spetsifikatsioonide järgi.</string>
 </resources>
