--- a/core/resources/src/main/res/values-hi/strings.xml
+++ b/core/resources/src/main/res/values-hi/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources>
+  -->
+
+<resources>
     <string name="stay">ठहरें</string>
     <string name="close">बंद करें</string>
     <string name="reset_image">छवि रीसेट करें</string>
@@ -2054,11 +2056,11 @@
     <string name="original_filename_pattern_description">बिना एक्सटेंशन के मूल फ़ाइल नाम का उपयोग करता है, जिससे आपको स्रोत पहचान बरकरार रखने में मदद मिलती है।</string>
     <string name="width_pattern_description">पिक्सेल में छवि की चौड़ाई, रिज़ॉल्यूशन परिवर्तन या स्केलिंग परिणामों को ट्रैक करने के लिए उपयोगी है।</string>
     <string name="height_pattern_description">पिक्सेल में छवि की ऊंचाई, पहलू अनुपात या निर्यात के साथ काम करते समय सहायक होती है।</string>
-    <string name="formatted_timestamp_pattern_description">एक अनुकूलन योग्य टाइमस्टैम्प जो आपको सही सॉर्टिंग के लिए yyyy-MM-dd_HH-mm-ss जैसे अपने स्वयं के प्रारूप को परिभाषित करने देता है।</string>
     <string name="random_numbers_pattern_description">अद्वितीय फ़ाइल नामों की गारंटी के लिए यादृच्छिक अंक उत्पन्न करता है; डुप्लिकेट के विरुद्ध अतिरिक्त सुरक्षा के लिए अधिक अंक जोड़ें।</string>
     <string name="sequence_number_pattern_description">बैच निर्यात के लिए ऑटो-इंक्रीमेंटिंग काउंटर, एक सत्र में एकाधिक छवियों को सहेजते समय आदर्श।</string>
     <string name="preset_info_pattern_description">लागू प्रीसेट नाम को फ़ाइल नाम में सम्मिलित करता है ताकि आप आसानी से याद रख सकें कि छवि कैसे संसाधित की गई थी।</string>
     <string name="scale_mode_pattern_description">प्रसंस्करण के दौरान उपयोग किए गए छवि स्केलिंग मोड को प्रदर्शित करता है, जो आकार, क्रॉप या फिट की गई छवियों को अलग करने में मदद करता है।</string>
     <string name="suffix_pattern_description">फ़ाइल नाम के अंत में कस्टम टेक्स्ट रखा गया है, जो _v2, _edited, या _final जैसे संस्करण के लिए उपयोगी है।</string>
     <string name="extension_pattern_description">फ़ाइल एक्सटेंशन (पीएनजी, जेपीजी, वेबपी, आदि), स्वचालित रूप से वास्तविक सहेजे गए प्रारूप से मेल खाता है।</string>
+    <string name="formatted_timestamp_pattern_description">एक अनुकूलन योग्य टाइमस्टैम्प जो आपको सही सॉर्टिंग के लिए जावा विनिर्देश द्वारा अपना स्वयं का प्रारूप परिभाषित करने देता है।</string>
 </resources>
