--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources>
+  -->
+
+<resources>
     <string name="smth_went_wrong">Что-то пошло не так: %1$s</string>
     <string name="size">Размер %1$s</string>
     <string name="loading">Загрузка…</string>
@@ -2056,11 +2058,11 @@
     <string name="original_filename_pattern_description">Использует исходное имя файла без расширения, что помогает сохранить идентификацию источника без изменений.</string>
     <string name="width_pattern_description">Ширина изображения в пикселях, полезная для отслеживания изменений разрешения или масштабирования результатов.</string>
     <string name="height_pattern_description">Высота изображения в пикселях, полезная при работе с пропорциями или экспорте.</string>
-    <string name="formatted_timestamp_pattern_description">Настраиваемая временная метка, позволяющая определить собственный формат, например гггг-ММ-дд_ЧЧ-мм-сс, для идеальной сортировки.</string>
     <string name="random_numbers_pattern_description">Генерирует случайные цифры, чтобы гарантировать уникальные имена файлов; добавьте больше цифр для дополнительной защиты от дубликатов.</string>
     <string name="sequence_number_pattern_description">Автоматически увеличивающийся счетчик для пакетного экспорта идеален при сохранении нескольких изображений за один сеанс.</string>
     <string name="preset_info_pattern_description">Вставляет имя примененной предустановки в имя файла, чтобы вы могли легко запомнить, как было обработано изображение.</string>
     <string name="scale_mode_pattern_description">Отображает режим масштабирования изображения, используемый во время обработки, помогая различать изображения с измененным размером, обрезанные или подогнанные.</string>
     <string name="suffix_pattern_description">Пользовательский текст, помещаемый в конце имени файла, полезный для управления версиями, например _v2, _edited или _final.</string>
     <string name="extension_pattern_description">Расширение файла (png, jpg, webp и т. д.) автоматически соответствует фактическому сохраненному формату.</string>
+    <string name="formatted_timestamp_pattern_description">Настраиваемая временная метка, позволяющая определить собственный формат по спецификации Java для идеальной сортировки.</string>
 </resources>
