--- a/core/resources/src/main/res/values-uk/strings.xml
+++ b/core/resources/src/main/res/values-uk/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources xmlns:tools="http://schemas.android.com/tools">
+  -->
+
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="image_too_large_preview">Зображення завелике для попереднього перегляду, але спроба збереження все одно буде здійснена</string>
     <string name="pick_image">Виберіть зображення для початку</string>
     <string name="resize_type">Тип масштабування</string>
@@ -2056,11 +2058,11 @@
     <string name="original_filename_pattern_description">Використовує оригінальну назву файлу без розширення, що допомагає зберегти ідентифікацію джерела.</string>
     <string name="width_pattern_description">Ширина зображення в пікселях, корисна для відстеження змін роздільної здатності або масштабування результатів.</string>
     <string name="height_pattern_description">Висота зображення в пікселях, корисна під час роботи зі співвідношенням сторін або експорту.</string>
-    <string name="formatted_timestamp_pattern_description">Настроювана позначка часу, яка дозволяє визначити власний формат, наприклад рррр-ММ-дд_ГГ-хм-сс для ідеального сортування.</string>
     <string name="random_numbers_pattern_description">Генерує випадкові цифри, щоб гарантувати унікальні імена файлів; додайте більше цифр для додаткового захисту від дублікатів.</string>
     <string name="sequence_number_pattern_description">Лічильник із автоматичним збільшенням для пакетного експорту, ідеальний під час збереження кількох зображень за один сеанс.</string>
     <string name="preset_info_pattern_description">Вставляє застосовану назву попереднього налаштування в назву файлу, щоб ви могли легко запам’ятати, як було оброблено зображення.</string>
     <string name="scale_mode_pattern_description">Відображає режим масштабування зображення, що використовується під час обробки, допомагаючи розрізняти зображення зі зміненим розміром, обрізані чи підібрані.</string>
     <string name="suffix_pattern_description">Спеціальний текст, розміщений у кінці назви файлу, корисний для керування версіями, наприклад _v2, _edited або _final.</string>
     <string name="extension_pattern_description">Розширення файлу (png, jpg, webp тощо), що автоматично відповідає дійсному збереженому формату.</string>
+    <string name="formatted_timestamp_pattern_description">Настроювана часова позначка, яка дозволяє визначити власний формат за специфікацією Java для ідеального сортування.</string>
 </resources>
